perf: tier JVM tuning between ultra-compact CLI tools and balanced streaming/server apps